# text2program-replication

./: .gitignore  README.md  Test Commands.ipynb  credentials  pyproject.toml
.ipynb_checkpoints/: Main-checkpoint.ipynb
data/: Untitled.ipynb  cond_look_up.json  rel_obj_look_up.json
model/: ensemble_test.py  evaluation.py  pl_model.py
saved/decode_outputs/natural/train/t5-base/ne100_lr0.0001_s2s_1/: natural_test_beam_5_top_p_1.0.csv
saved/decode_outputs/natural/train/t5-base/ne100_lr0.0001_s2s_12/: natural_test_beam_5_top_p_1.0.csv
saved/decode_outputs/natural/train/t5-base/ne100_lr0.0001_s2s_123/: natural_test_beam_5_top_p_1.0.csv
saved/decode_outputs/natural/train/t5-base/ne100_lr0.0001_s2s_1234/: natural_test_beam_5_top_p_1.0.csv
saved/natural/train/t5-base/ne100_lr0.0001_s2s_1/version_0/: events.out.tfevents.1746470352.4f5d75dad1e6.17642.0  hparams.yaml
saved/natural/train/t5-base/ne100_lr0.0001_s2s_12/version_0/: events.out.tfevents.1746470732.4f5d75dad1e6.35095.0  hparams.yaml
saved/natural/train/t5-base/ne100_lr0.0001_s2s_123/version_0/: events.out.tfevents.1746471111.4f5d75dad1e6.52548.0  hparams.yaml
saved/natural/train/t5-base/ne100_lr0.0001_s2s_1234/version_0/: events.out.tfevents.1746471481.4f5d75dad1e6.70000.0  hparams.yaml
saved/natural/train/t5-base/ne100_lr0.0001_s2s_1234/version_1/: events.out.tfevents.1746472450.4f5d75dad1e6.87460.0  hparams.yaml
saved/natural/train/t5-base/ne100_lr0.0001_s2s_42/version_0/: events.out.tfevents.1746125583.171a6a5a4893.2560.0  hparams.yaml
test_time_scaling/: Test Time Scaling Analysis.ipynb
(+7 files in other folders)
